// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Typeahead / controlled default 1`] = `
<div
  onChange={[Function]}
>
  <label
    data-css-w0yocm=""
  >
    <div
      data-css-1r967oi=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-177hkuc=""
        >
          <input
            data-css-lzb8ea=""
            disabled={false}
            onChange={[Function]}
            onFocus={[Function]}
            value="Alabama"
          />
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Components | Typeahead / uncontrolled default 1`] = `
<div>
  <label
    data-css-w0yocm=""
  >
    <div
      data-css-1r967oi=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-177hkuc=""
        >
          <input
            data-css-lzb8ea=""
            disabled={false}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          />
        </div>
      </div>
    </div>
  </label>
</div>
`;
